--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <inceptionYear>2005</inceptionYear>
     <developers>
         <developer>
+			<id>kaare</id>
             <name>Kaare Nilsen</name>
             <email>kaare.nilsen@gmail.com</email>
             <roles>
@@ -35,16 +36,19 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-project</artifactId>
             <version>2.0</version>
+			<scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>2.0</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>aspectj</groupId>
             <artifactId>aspectjtools</artifactId>
             <version>1.5.0_M5</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -64,6 +68,13 @@
             <groupId>org.codehaus.plexus</groupId>
             <artifactId>plexus-compiler-api</artifactId>
             <version>1.5.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-embedder</artifactId>
+            <version>2.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
