--- a/pom.xml
+++ b/pom.xml
@@ -1,58 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <artifactId>mojo</artifactId>
-        <groupId>org.codehaus.mojo</groupId>
-        <version>4</version>
-    </parent>
-    <artifactId>aspectj-maven-plugin</artifactId>
-    <version>2.0-SNAPSHOT</version>
-    <packaging>maven-plugin</packaging>
-    <name>AspectJ compiler Maven Plugin</name>
-    <inceptionYear>2005</inceptionYear>
-    <developers>
-        <developer>
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>mojo</artifactId>
+		<groupId>org.codehaus.mojo</groupId>
+		<version>5</version>
+	</parent>
+	<artifactId>aspectj-maven-plugin</artifactId>
+	<version>2.0-SNAPSHOT</version>
+	<packaging>maven-plugin</packaging>
+	<name>AspectJ compiler Maven Plugin</name>
+	<inceptionYear>2005</inceptionYear>
+	<developers>
+		<developer>
 			<id>kaare</id>
-            <name>Kaare Nilsen</name>
-            <email>kaare.nilsen@gmail.com</email>
-            <roles>
-                <role>Java Developer</role>
-            </roles>
-            <timezone>+1</timezone>
-        </developer>
-    </developers>
-    <licenses>
-        <license>
-            <name>The MIT License</name>
-            <url>LICENSE.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
+			<name>Kaare Nilsen</name>
+			<email>kaare.nilsen@gmail.com</email>
+			<roles>
+				<role>Java Developer</role>
+			</roles>
+			<timezone>+1</timezone>
+		</developer>
+	</developers>
+	<licenses>
+		<license>
+			<name>The MIT License</name>
+			<url>LICENSE.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-project</artifactId>
-			<version>2.0</version>
+			<version>2.0.1</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-plugin-api</artifactId>
-			<version>2.0</version>
+			<version>2.0.1</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven.reporting</groupId>
 			<artifactId>maven-reporting-api</artifactId>
-			<version>2.0</version>
+			<version>2.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven.reporting</groupId>
 			<artifactId>maven-reporting-impl</artifactId>
-			<version>2.0</version>
+			<version>2.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>doxia</groupId>
@@ -62,33 +62,19 @@
 		<dependency>
 			<groupId>aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
-			<version>1.5.0_M5</version>
+			<version>1.5.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>aspectj</groupId>
 			<artifactId>aspectjtools</artifactId>
-			<version>1.5.0_M5</version>
+			<version>1.5.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
-			<type>jar</type>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>sun.jdk</groupId>
-			<artifactId>tools</artifactId>
-			<version>1.4.0</version>
-			<systemPath>${java.home}/../lib/tools.jar</systemPath>
-			<scope>system</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>1.2.5</version>
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
@@ -101,33 +87,34 @@
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-embedder</artifactId>
-			<version>2.0</version>
+			<version>2.0.1</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>1.4</source>
 					<target>1.4</target>
 				</configuration>
-            </plugin>
+			</plugin>
 			<plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<skip>false</skip>
 					<excludes>
 						<exclude> **/test-project/**/*.java</exclude>
+						<exclude> **/Abstract*Test.java</exclude>
 					</excludes>
 				</configuration>
-            </plugin>
-        </plugins>
-    </build>
-    <reporting>
+			</plugin>
+		</plugins>
+	</build>
+	<reporting>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -150,5 +137,27 @@
 				</reportSets>
 			</plugin>
 		</plugins>
-    </reporting>
+	</reporting>
+	<profiles>
+		<profile>
+			<!-- NOTE: This will not be activated on OS X, since classes.jar
+			already has the tools in it. -->
+			<id>default-tools.jar</id>
+			<activation>
+				<property>
+					<name>java.vendor</name>
+					<value>Sun Microsystems Inc.</value>
+				</property>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>sun.jdk</groupId>
+					<artifactId>tools</artifactId>
+					<version>1.4.2</version>
+					<scope>system</scope>
+					<systemPath>${java.home}/../lib/tools.jar</systemPath>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
