--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<artifactId>mojo</artifactId>
-		<groupId>org.codehaus.mojo</groupId>
-		<version>5</version>
-	</parent>
+	  <parent>
+	    <artifactId>mojo-sandbox</artifactId>
+	    <groupId>org.codehaus.mojo</groupId>
+	    <version>1</version>
+	  </parent>
 	<artifactId>aspectj-maven-plugin</artifactId>
 	<version>2.0-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
