--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	  <parent>
 	    <artifactId>mojo-sandbox</artifactId>
 	    <groupId>org.codehaus.mojo</groupId>
-	    <version>1</version>
+	    <version>2-SNAPSHOT</version>
 	  </parent>
 	<artifactId>aspectj-maven-plugin</artifactId>
 	<version>2.0-SNAPSHOT</version>
