--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>mojo-sandbox</artifactId>
     <groupId>org.codehaus.mojo</groupId>
-    <version>1</version>
+    <version>2-SNAPSHOT</version>
   </parent>
   <artifactId>axistools-maven-plugin</artifactId>
   <version>0.1-SNAPSHOT</version>
