--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,16 @@
       <timezone>+1</timezone>
     </developer>
   </developers>
+  <contributors>
+    <contributor>
+      <name>Thor Åge Eldby</name>
+      <email>tel@objectnet.no</email>
+      <roles>
+        <role>Java Developer</role>
+      </roles>
+      <timezone>+1</timezone>
+    </contributor>
+  </contributors>
   <licenses>
     <license>
       <name>The MIT License</name>
@@ -40,6 +50,11 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-artifact</artifactId>
       <version>2.0.1</version>
     </dependency>
     <dependency>
@@ -99,7 +114,7 @@
           <skip>false</skip>
           <excludes>
             <exclude> **/test-project/**/*.java</exclude>
-            <exclude> **/Abstract*Test.java</exclude>
+            <exclude> **/AbstractAjcMojoTest.java</exclude>
           </excludes>
         </configuration>
       </plugin>
