renamed weaveModules, and libraryModules. Added default-value on params that had one, and changed phase from compile to process-sources
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/mojo-sandbox/aspectj-maven-plugin@1507 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
       <id>kaare</id>
       <name>Kaare Nilsen</name>
       <email>kaare.nilsen@gmail.com</email>
+      <organization>Objectware</organization>
+      <organizationUrl>http://www.objectware.no</organizationUrl>
       <roles>
         <role>Java Developer</role>
       </roles>
