--- a/src/test/resources/test-project/pom.xml
+++ b/src/test/resources/test-project/pom.xml
@@ -32,7 +32,7 @@
 					<execution>
 						<id>compile</id>
 						<configuration>
-							<complianceLevel>1.5</complianceLevel>
+							<!--complianceLevel>1.5</complianceLevel--> 
 							<verbose>true</verbose>
 							<showWeaveInfo>true</showWeaveInfo>
 							<ajdtBuildDefFile>
@@ -58,7 +58,8 @@
 					<execution>
 						<id>test-compile</id>
 						<configuration>
-							<complianceLevel>1.5</complianceLevel>
+							<source>1.5</source>
+							<!--complianceLevel>1.5</complianceLevel-->
 							<verbose>true</verbose>
 							<showWeaveInfo>true</showWeaveInfo>
 							<ajdtBuildDefFile>
