fixed bug MOJO-305. Also removed the last usage of  default-value on parameters, since it screwed up the compile
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/mojo-sandbox/aspectj-maven-plugin@1514 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/test/resources/test-project/pom.xml
+++ b/src/test/resources/test-project/pom.xml
@@ -32,7 +32,7 @@
 					<execution>
 						<id>compile</id>
 						<configuration>
-							<!--complianceLevel>1.5</complianceLevel--> 
+							<complianceLevel>1.5</complianceLevel> 
 							<verbose>true</verbose>
 							<showWeaveInfo>true</showWeaveInfo>
 							<ajdtBuildDefFile>
