--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
-      <artifactId>maven-project</artifactId>
+      <artifactId>maven-core</artifactId>
       <version>2.0</version>
     </dependency>      
     <dependency>
@@ -57,4 +57,15 @@
       <version>1.0.1</version>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-idea-plugin</artifactId>
+         <configuration>
+            <jdkName>1.4</jdkName>
+         </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
