preparing release of 1.0-beta1
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@1641 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,7 @@
           <skip>false</skip>
           <excludes>
             <exclude> **/test-project/**/*.java</exclude>
+            <exclude> **/parent-child-test-project/**/*.java</exclude>
             <exclude> **/AbstractAjcMojoTest.java</exclude>
           </excludes>
         </configuration>
