--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-    <parent>
-      <artifactId>mojo-sandbox</artifactId>
-      <groupId>org.codehaus.mojo</groupId>
-      <version>2-SNAPSHOT</version>
-    </parent>
+ <modelVersion>4.0.0</modelVersion>
+ <parent>
+    <artifactId>mojo</artifactId>
+    <groupId>org.codehaus.mojo</groupId>
+    <version>6</version>
+  </parent>
   <artifactId>aspectj-maven-plugin</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
@@ -28,7 +28,7 @@
   </developers>
   <contributors>
     <contributor>
-      <name>Thor Åge Eldby</name>
+      <name>Thor Age Eldby</name>
       <email>tel@objectnet.no</email>
       <roles>
         <role>Java Developer</role>
@@ -73,13 +73,11 @@
       <groupId>aspectj</groupId>
       <artifactId>aspectjrt</artifactId>
       <version>1.5.0</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>aspectj</groupId>
       <artifactId>aspectjtools</artifactId>
       <version>1.5.0</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
