--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>aspectj-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>AspectJ compiler Maven Plugin</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0-beta-1</version>
   <inceptionYear>2005</inceptionYear>
   <developers>
     <developer>
