--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>mojo-sandbox</artifactId>
+    <artifactId>mojo</artifactId>
     <groupId>org.codehaus.mojo</groupId>
-    <version>2-SNAPSHOT</version>
+    <version>7</version>
   </parent>
   <artifactId>axistools-maven-plugin</artifactId>
   <version>1.0-SNAPSHOT</version>
