--- a/pom.xml
+++ b/pom.xml
@@ -1,40 +1,40 @@
-<project>
-  <modelVersion>4.0.0</modelVersion>
+<?xml version="1.0" encoding="UTF-8"?><project>
   <parent>
     <artifactId>mojo</artifactId>
     <groupId>org.codehaus.mojo</groupId>
     <version>7</version>
   </parent>
+  <modelVersion>4.0.0</modelVersion>
   <artifactId>axistools-maven-plugin</artifactId>
-  <version>1.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>Maven Axis Tools Plugin</name>
+  <version>1.0</version>
   <inceptionYear>2005</inceptionYear>
   <dependencies>
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-compiler-api</artifactId>
+      <version>1.5.1</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-core</artifactId>
       <version>2.0</version>
-    </dependency>      
+    </dependency>
     <dependency>
       <groupId>axis</groupId>
       <artifactId>axis</artifactId>
       <version>1.2.1</version>
     </dependency>
     <dependency>
+      <groupId>plexus</groupId>
+      <artifactId>plexus-utils</artifactId>
+      <version>1.0.1</version>
+    </dependency>
+    <dependency>
       <groupId>axis</groupId>
       <artifactId>axis-jaxrpc</artifactId>
       <version>1.2</version>
-    </dependency>
-    <dependency>
-      <groupId>axis</groupId>
-      <artifactId>axis-wsdl4j</artifactId>
-      <version>1.5.1</version>
-    </dependency>
-    <dependency>
-      <groupId>axis</groupId>
-      <artifactId>axis-saaj</artifactId>
-      <version>1.2.1</version>
     </dependency>
     <dependency>
       <groupId>commons-logging</groupId>
@@ -47,14 +47,14 @@
       <version>20040218.194635</version>
     </dependency>
     <dependency>
-      <groupId>org.codehaus.plexus</groupId>
-      <artifactId>plexus-compiler-api</artifactId>
+      <groupId>axis</groupId>
+      <artifactId>axis-wsdl4j</artifactId>
       <version>1.5.1</version>
     </dependency>
     <dependency>
-      <groupId>plexus</groupId>
-      <artifactId>plexus-utils</artifactId>
-      <version>1.0.1</version>
+      <groupId>axis</groupId>
+      <artifactId>axis-saaj</artifactId>
+      <version>1.2.1</version>
     </dependency>
   </dependencies>
 </project>
