--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>axistools-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>Maven Axis Tools Plugin</name>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <inceptionYear>2005</inceptionYear>
   <dependencies>
     <dependency>
