--- a/src/test/projects/no-main-weave-project/pom.xml
+++ b/src/test/projects/no-main-weave-project/pom.xml
@@ -5,10 +5,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.codehaus.mojo.aspectj.test-projects</groupId>
 	<version>1.0</version>
-	<artifactId>aspectj-compiler-no-sources-testproject</artifactId>
+	<artifactId>aspectj-compiler-no-main-weave-testproject</artifactId>
 	<packaging>jar</packaging>
-	<name>aspectj-compiler-no-sources-testproject</name>
+	<name>aspectj-compiler-testproject</name>
 	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
@@ -24,14 +30,25 @@
 				<artifactId>aspectj-maven-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>compile</id>
+						<id>test-compile</id>
+						<configuration>
+							<complianceLevel>1.4</complianceLevel>
+						</configuration>
 						<goals>
-							<goal>compile</goal>
 							<goal>test-compile</goal>
 						</goals>
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 </project>
