* Fixed MOJO-490 Xlint parameter is handled incorrectly. * Upgraded to aspectJ 1.5.2a
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@2272 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/test/projects/test-project/pom.xml
+++ b/src/test/projects/test-project/pom.xml
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
-			<version>1.5.2</version>
+			<version>1.5.2a</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
