--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
         <dependency>
             <groupId>aspectj</groupId>
             <artifactId>aspectjtools</artifactId>
-            <version>1.5.2</version>
+            <version>1.5.2a</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
@@ -141,7 +141,7 @@
         <dependency>
             <groupId>aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.5.2</version>
+            <version>1.5.2a</version>
         </dependency>
     </dependencies>
     <reporting>
