[maven-scm] copy for tag aspectj-maven-plugin-1.0-beta-2
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/tags/aspectj-maven-plugin-1.0-beta-2@2299 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,14 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <artifactId>mojo</artifactId>
     <groupId>org.codehaus.mojo</groupId>
-    <version>11</version>
+    <version>12</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
     <artifactId>aspectj-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <name>AspectJ compiler Maven Plugin</name>
-    <version>1.0-beta-2-SNAPSHOT</version>
+    <version>1.0-beta-2</version>
     <url>http://mojo.codehaus.org/aspectj-maven-plugin</url>
     <inceptionYear>2005</inceptionYear>
     <developers>
@@ -110,7 +107,7 @@
         <dependency>
             <groupId>aspectj</groupId>
             <artifactId>aspectjtools</artifactId>
-            <version>1.5.2</version>
+            <version>1.5.2a</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
@@ -141,7 +138,7 @@
         <dependency>
             <groupId>aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.5.2</version>
+            <version>1.5.2a</version>
         </dependency>
     </dependencies>
     <reporting>
@@ -168,4 +165,10 @@
             </plugin>
         </plugins>
     </reporting>
+
+  <scm>
+    <connection>scm:svn:https://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.0-beta-2</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.0-beta-2</developerConnection>
+    <url>https://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.0-beta-2</url>
+  </scm>
 </project>
