--- a/src/test/projects/aspects-in-main-project/pom.xml
+++ b/src/test/projects/aspects-in-main-project/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.5.2a</version>
+            <version>1.5.3</version>
             <scope>compile</scope>
         </dependency>
 
