--- a/src/test/projects/parent-child-test-project/pom.xml
+++ b/src/test/projects/parent-child-test-project/pom.xml
@@ -9,7 +9,7 @@
     <dependency>
       <groupId>aspectj</groupId>
       <artifactId>aspectjrt</artifactId>
-      <version>1.5.2a</version>
+      <version>1.5.3</version>
     </dependency>
   </dependencies>
 
