--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>axistools-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>Maven Axis Tools Plugin</name>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
   <inceptionYear>2005</inceptionYear>
   <dependencies>
     <dependency>
@@ -57,10 +57,4 @@
       <version>1.4</version>
     </dependency>
   </dependencies>
-
-  <scm>
-    <connection>scm:svn:https://svn.codehaus.org/mojo/tags/axistools-maven-plugin-1.1</connection>
-    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/tags/axistools-maven-plugin-1.1</developerConnection>
-    <url>https://svn.codehaus.org/mojo/tags/axistools-maven-plugin-1.1</url>
-  </scm>
 </project>
