o House cleaning. Make sure that all production plugins have separate JIRA projects.
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/axistools-maven-plugin@5881 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,10 @@
   <packaging>maven-plugin</packaging>
   <name>Maven Axis Tools Plugin</name>
   <version>1.2-SNAPSHOT</version>
+  <issueManagement>
+    <system>JIRA</system>
+    <url>http://jira.codehaus.org/browse/MAXISTOOLS</url>
+  </issueManagement>
   <inceptionYear>2005</inceptionYear>
   <dependencies>
     <dependency>
