--- a/pom.xml
+++ b/pom.xml
@@ -31,34 +31,13 @@
       <version>1.0.1</version>
     </dependency>
     <dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
-      <version>1.0.4</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-discovery</groupId>
-      <artifactId>commons-discovery</artifactId>
-      <version>20040218.194635</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.axis</groupId>
+	  <!-- POM under org.apache.axis groupId doesn't declare meta-datas 
+	       and cannot be overriden in <plugin><dependencies> to use an 
+		   older axis release.
+	  -->
+      <groupId>axis</groupId>
       <artifactId>axis</artifactId>
       <version>1.4</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.axis</groupId>
-      <artifactId>axis-jaxrpc</artifactId>
-      <version>1.4</version>
-    </dependency>
-    <dependency>
-      <groupId>axis</groupId>
-      <artifactId>axis-wsdl4j</artifactId>
-      <version>1.5.1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.axis</groupId>
-      <artifactId>axis-saaj</artifactId>
-      <version>1.4</version>
-    </dependency>
+    </dependency>    
   </dependencies>
 </project>
