--- a/src/test/projects/no-main-weave-project/pom.xml
+++ b/src/test/projects/no-main-weave-project/pom.xml
@@ -16,9 +16,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>aspectj</groupId>
+            <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.5.3</version>
+            <version>1.5.4</version>
             <scope>compile</scope>
         </dependency>
 
