--- a/src/test/projects/parent-child-test-project/pom.xml
+++ b/src/test/projects/parent-child-test-project/pom.xml
@@ -7,9 +7,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>aspectj</groupId>
+      <groupId>org.aspectj</groupId>
       <artifactId>aspectjrt</artifactId>
-      <version>1.5.3</version>
+      <version>1.5.4</version>
     </dependency>
   </dependencies>
 
