--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>aspectj-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <name>AspectJ compiler Maven Plugin</name>
-    <version>1.0-beta-4-SNAPSHOT</version>
+    <version>1.0-rc-1-SNAPSHOT</version>
     <url>http://mojo.codehaus.org/aspectj-maven-plugin</url>
     <inceptionYear>2005</inceptionYear>
     <developers>
@@ -18,8 +18,8 @@
             <id>kaare</id>
             <name>Kaare Nilsen</name>
             <email>kaare.nilsen@gmail.com</email>
-            <organization>Objectware</organization>
-            <organizationUrl>http://www.objectware.no</organizationUrl>
+            <organization>Arktekk</organization>
+            <organizationUrl>http://arktekk.no</organizationUrl>
             <roles>
                 <role>Java Developer</role>
             </roles>
