--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <artifactId>mojo</artifactId>
         <groupId>org.codehaus.mojo</groupId>
@@ -10,7 +8,7 @@
     <artifactId>aspectj-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <name>AspectJ compiler Maven Plugin</name>
-    <version>1.0-rc-1-SNAPSHOT</version>
+    <version>1.0</version>
     <url>http://mojo.codehaus.org/aspectj-maven-plugin</url>
     <inceptionYear>2005</inceptionYear>
     <developers>
@@ -178,4 +176,10 @@
             </plugin>
         </plugins>
     </reporting>
+
+  <scm>
+    <connection>scm:svn:https://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.0</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.0</developerConnection>
+    <url>https://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.0</url>
+  </scm>
 </project>
