--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>aspectj-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <name>AspectJ compiler Maven Plugin</name>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <url>http://mojo.codehaus.org/aspectj-maven-plugin</url>
     <inceptionYear>2005</inceptionYear>
     <developers>
@@ -176,10 +176,4 @@
             </plugin>
         </plugins>
     </reporting>
-
-  <scm>
-    <connection>scm:svn:https://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.0</connection>
-    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.0</developerConnection>
-    <url>https://svn.codehaus.org/mojo/tags/aspectj-maven-plugin-1.0</url>
-  </scm>
 </project>
