o Improved compliance with plugin documentation standard
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/axistools-maven-plugin@6744 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
   <packaging>maven-plugin</packaging>
   <name>Maven Axis Tools Plugin</name>
   <version>1.2-SNAPSHOT</version>
+  <description>
+    This plugin supports the wsdl2java and java2wsdl tools from the Apache Axis project.
+  </description>
+  <prerequisites>
+    <maven>2.0</maven>
+  </prerequisites>
   <issueManagement>
     <system>JIRA</system>
     <url>http://jira.codehaus.org/browse/MAXISTOOLS</url>
