CLOSED - issue MOJO-1115: upgrade to AspectJ 1.6.1 - add myself as contributor http://jira.codehaus.org/browse/MOJO-1115
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@7463 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,17 @@
             </roles>
             <timezone>+1</timezone>
         </contributor>
+        <contributor>
+          <name>David J. M. Karlsen</name>
+          <email>david@codehaus.org</email>
+          <organization>davidkarlsen.com</organization>
+          <organizationUrl>http://www.davidkarlsen.com</organizationUrl>
+          <url>http://xircles.codehaus.org/users/david</url>
+          <roles>
+            <role>Java Developer</role>
+          </roles>
+          <timezone>+1</timezone>
+        </contributor>
     </contributors>
     <licenses>
         <license>
