add cimanagement section - move to a more official place later
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@7464 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
     <version>1.1-SNAPSHOT</version>
     <url>http://mojo.codehaus.org/aspectj-maven-plugin</url>
     <inceptionYear>2005</inceptionYear>
+    <ciManagement>
+      <system>hudson</system>
+      <url>http://www.davidkarlsen.com/hudson/</url>
+    </ciManagement>
     <developers>
         <developer>
             <id>kaare</id>
