--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
   <name>Maven Axis Tools Plugin</name>
   <version>1.2-SNAPSHOT</version>
   <description>
-    This plugin supports the wsdl2java and java2wsdl tools from the Apache Axis project.
+    This plugin supports the wsdl2java and java2wsdl tools from the Apache Axis (1) project.
   </description>
   <prerequisites>
-    <maven>2.0</maven>
+    <maven>2.0.6</maven>
   </prerequisites>
   <issueManagement>
     <system>JIRA</system>
@@ -24,7 +24,7 @@
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-compiler-api</artifactId>
-      <version>1.5.1</version>
+      <version>1.5.3</version>
     </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
@@ -34,12 +34,12 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-core</artifactId>
-      <version>2.0</version>
+      <version>2.0.6</version>
     </dependency>
     <dependency>
-      <groupId>plexus</groupId>
+      <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-utils</artifactId>
-      <version>1.0.1</version>
+      <version>1.5.6</version>
     </dependency>
     <dependency>
 	  <!-- POM under org.apache.axis groupId doesn't declare meta-datas 
@@ -51,4 +51,15 @@
       <version>1.4</version>
     </dependency>    
   </dependencies>
+  <developers>
+    <developer>
+      <id>david</id>
+      <email>david@codehaus.org</email>
+      <name>David J. M. Karlsen</name>
+      <organization>codehaus.org</organization>
+      <organizationUrl>http://www.codehaus.org</organizationUrl>
+      <timezone>1</timezone>
+      <url>http://www.davidkarlsen.com</url>
+    </developer>
+  </developers>
 </project>
